[ADD]: add sOpenApiController
